# InterXAI

.github/workflows/: frontend-ci.yml
backend/: pyproject.toml  setup.cfg
backend/app/: config.py
backend/app/ai/: evaluator.py
backend/app/background/celery/: celery.py
backend/app/background/taskiq/: taskiq.py
backend/app/models/: dsa_question.py
backend/app/routers/: application.py
backend/app/utils/: default_providers.py
backend/tests/: conftest.py
backend/tests/test_routers/: __init__.py  test_application.py  test_health.py
frontend/src/: App.tsx
frontend/src/components/: LandingPage.tsx
frontend/src/features/auth/: EmailVerificationPage.tsx  LoginPage.tsx  SignupPage.tsx  VerifyEmailPage.tsx
frontend/src/features/auth/components/: AuthShell.tsx  auth-pages.css
frontend/src/features/org/: OrgAuthPage.tsx  OrgDashboardPage.tsx
frontend/src/features/user/: DashboardPage.tsx  ProfileSetupPage.tsx
frontend/src/services/: leaderboard.service.ts
