[project]
name = "backend"
version = "0.1.0"
description = "InterXAI - AI-powered interview automation system (FastAPI backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.115.0",
    "greenlet>=3.4.0",
    "pyjwt>=2.9.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.22.1",
    "pydantic[email]>=2.13.0",
    "langchain-litellm>=0.6.4",
    "langchain-groq>=0.2.0",
    "groq>=0.30.0,<1",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0,<1",
    "pypdf2>=3.0.1",
    "taskiq>=0.11.0",
    "taskiq-redis>=0.5.0",
    "taskiq-aio-pika>=0.4",
    "aio-pika>=9.2",
    "python-multipart>=0.0.27",
    "supabase>=2.30.0",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    # Test dependencies (issue #85)
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "session"
